--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -26,21 +26,22 @@ jobs:
 
       - name: Download statically compiled bash and rsync
         run: |
-          mkdir /bin
-          wget -O ./bin/rsync "https://github.com/mightychoc/rsync-for-arm/releases/download/${{ env.RSYNC_TAG }}/rsync"
-          wget -O ./bin/bash "https://github.com/mightychoc/bash-for-arm/releases/download/${{ env.BASH_TAG }}/bash"
+          mkdir -p screenblitz/bin
+          wget -O ./screenblitz/bin/rsync "https://github.com/mightychoc/rsync-for-arm/releases/download/${{ env.RSYNC_TAG }}/rsync"
+          wget -O ./screenblitz/bin/bash "https://github.com/mightychoc/bash-for-arm/releases/download/${{ env.BASH_TAG }}/bash"
 
       - name: Download gsocket
         run: |
           mkdir gsocket-temp
           wget -O ./gsocket-temp/gsocket.tar.gz "https://github.com/hackerschoice/gsocket/releases/download/${{ env.GSOCKET_TAG }}/gsocket_linux-aarch64.tar.gz"
           tar -xvzf ./gsocket-temp/gsocket.tar.gz
-          cp -r ./gsocket-temp/gsocket/* ./bin
+          cp -r ./gsocket-temp/gsocket/* ./screenblitz/bin
           rm -r gsocket-temp
       
       - name: Bundle code and resources
         run: |
-          tar -czvf screenblitz.tar.gz .
+          cp -r . screenblitz/
+          tar -czvf screenblitz.tar.gz screenblitz/
       
       - name: Create release
         uses: svenstaro/upload-release-action@v2
